# cgo_test

./: BUILD.bazel  README.md  WORKSPACE  add.c  add.h  go.mod  go.sum  main.go  main_test.go  nogolinters.bzl
