load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load(":nogolinters.bzl", "nogo_linters")

nogo_linters()

# gazelle:prefix github.com/example/project
gazelle(name = "gazelle")

go_library(
    name = "project_lib",
    srcs = [
        "add.c",
        "add.h",
        "main.go",
    ],
    cdeps = [":add", "@libpam//:lib"],
    cgo = True,
    importpath = "github.com/example/project",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

cc_library(
    name = "add",
    srcs = [
        "add.c",
        "add.h",
    ],
    hdrs = ["add.h"],
)

go_binary(
    name = "project",
    embed = [":project_lib"],
    linkmode = "c-shared",
    visibility = ["//visibility:public"],
)

go_test(
    name = "project_test",
    srcs = ["main_test.go"],
    embed = [":project_lib"],
    deps = ["@com_github_stretchr_testify//assert"],
)
